# Gas_Refil_systme_with_ui

./: CLAUDE.md  FRONTEND_ENHANCEMENT.md  client.py  gastracker_ui_spec.md  pyproject.toml
gastracker-ui/backend/: .env  mcp_client.py  requirements.txt  server.py  test_backend.py
gastracker-ui/frontend/app/: globals.css  layout.tsx  page.tsx
gastracker-ui/frontend/app/api/chat/: route.ts
gastracker-ui/frontend/app/api/health/: route.ts
gastracker-ui/frontend/components/: ChatHistory.tsx  ChatInput.tsx  QuickActions.tsx  RotationTable.tsx  StatusIndicator.tsx  TurnBanner.tsx
gastracker-ui/frontend/styles/: dashboard.module.css
gastracker-ui/frontend/types/: chat.ts
